# aisha

./: .gitignore  README.md  pyproject.toml
config/: models.yaml
config/bundles/qwen_rapid_aio/: current
config/bundles/qwen_rapid_aio/260103-16/: bundle.yaml
config/bundles/qwen_rapid_aio/260103-18/: bundle.yaml
config/bundles/qwen_rapid_aio/260103-19/: bundle.yaml
config/bundles/qwen_rapid_aio_16/: current
config/bundles/qwen_rapid_aio_16/260103-01/: bundle.yaml
config/bundles/qwen_rapid_aio_18/260103-01/: bundle.yaml  workflow.json
config/bundles/wan_2.2_i2v/: current
config/bundles/wan_2.2_i2v/260105-01/: bundle.yaml  workflow.json
config/bundles/wan_2.2_i2v_das/260101-01/: bundle.yaml  workflow.json
config/bundles/wan_2.2_i2v_example/: current
config/bundles/wan_2.2_i2v_example/260101-01/: bundle.yaml
config/bundles/zimage.moody/260108-01/: bundle.yaml  workflow.json
config/bundles/zimage.xplus.nirai/current/: bundle.yaml  workflow.json
scripts/: deploy.sh  quick_deploy.py
src/ai_content_service/: __init__.py  bundle.py  cli.py  comfyui.py  config.py  deployer.py  downloader.py  snapshot.py  workflows.py
tests/: __init__.py  test_bundle.py  test_config.py  test_deploy_mode.py  test_downloader.py
